# cppinity

./: .gitignore  CMakeLists.txt  LICENSE  README.md  emcc_build.bat  emcc_build.sh  vs17_rebuild.bat  xcode_build.sh
engine/: CMakeLists.txt
engine/include/: Canvas.h  GameObject.h  GameObjectBuilder.h  IRenderer.h  Input.h  Material.h  MaterialManager.h  Resource.h  ResourceManager.h  Scene.h  Shader.h  ShaderManager.h  SokolRenderer.h  Std.h  Texture.h  sokol_wrapper.h
engine/include/Components/: Animation.h  BaseComponent.h  Canvas.h  IInputHandler.h  InputHandler.h  RectRenderer.h  RendererComponent.h  SimpleCollider.h  SpriteRenderer.h  Transform.h
engine/include/Math/: Vector2.h
engine/oryol/Modules/: CMakeLists.txt
engine/oryol/Modules/Assets/Gfx/: MeshBuilder.cc  MeshBuilder.h  ShapeBuilder.cc  ShapeBuilder.h  VertexWriter.cc  VertexWriter.h
engine/oryol/Modules/Assets/UnitTests/: MeshBuilderTest.cc  ShapeBuilderTest.cc  VertexWriterTest.cc
engine/oryol/Modules/Core/: App.h  AppState.h  Args.cc  Args.h  Assertion.h  Class.h  Config.h  Creator.h  Log.cc  Log.h  Logger.cc  Logger.h  RefCounted.h  precompiled.h
engine/oryol/Modules/Core/Containers/: Array.h
engine/oryol/Modules/Core/Time/: Clock.cc  Clock.h  Duration.h  TimePoint.h
engine/oryol/Modules/Core/UnitTests/: ArgsTest.cc  ArrayMapTest.cc  ClockTest.cc  CreationTest.cc  CreatorTest.cc  DurationTest.cc  HashSetTest.cc  MemoryTest.cc  RttiTest.cc  StringAtomTest.cc  StringBuilderTest.cc  StringConverterTest.cc  StringTest.cc  TimePointTest.cc  WideStringTest.cc  elementBufferTest.cc
engine/oryol/Modules/Core/private/ios/: iosBridge.h  iosBridge.mm
engine/oryol/Modules/Core/private/posix/: precompiled.h
engine/oryol/Modules/Dbg/: CMakeLists.txt  Dbg.cc  Dbg.h
engine/oryol/Modules/Dbg/private/: DebugShaders.glsl  debugFont.cc
engine/oryol/Modules/Gfx/: Gfx.cc  Gfx.h  GfxTypes.h
engine/oryol/Modules/Gfx/UnitTests/: MeshFactoryTest.cc  MeshSetupTest.cc  RenderEnumsTest.cc  RenderSetupTest.cc  TestShaderLibrary.glsl  TextureFactoryTest.cc  TextureSetupTest.cc  VertexLayoutTest.cc  glTypesTest.cc
engine/oryol/Modules/Gfx/private/: displayMgr.h  displayMgrBase.cc  displayMgrBase.h
engine/oryol/Modules/Gfx/private/egl/: eglDisplayMgr.cc  eglDisplayMgr.h
engine/oryol/Modules/Gfx/private/gl/: glTypes.cc  glTypes.h  gl_decl.h  gl_impl.h
engine/oryol/Modules/Gfx/private/glfw/: glfwDisplayMgr.cc  glfwDisplayMgr.h
engine/oryol/Modules/Gfx/private/ios/: iosDisplayMgr.h  iosDisplayMgr.mm
engine/oryol/Modules/HttpFS/: CMakeLists.txt  HTTPFileSystem.cc  HTTPFileSystem.h
engine/oryol/Modules/HttpFS/private/: baseURLLoader.cc  baseURLLoader.h  urlLoader.h
engine/oryol/Modules/HttpFS/private/osx/: osxURLLoader.h  osxURLLoader.mm
engine/oryol/Modules/HttpFS/private/win/: winURLLoader.cc  winURLLoader.h
engine/oryol/Modules/IO/: CMakeLists.txt  FileSystemBase.cc  FileSystemBase.h
engine/oryol/Modules/IO/UnitTests/: IOStatusTest.cc  URLBuilderTest.cc  URLTest.cc  assignRegistryTest.cc  schemeRegistryTest.cc
engine/oryol/Modules/IO/private/: assignRegistry.cc  assignRegistry.h  schemeRegistry.cc  schemeRegistry.h
engine/oryol/Modules/Input/: CMakeLists.txt  Input.cc  Input.h
engine/oryol/Modules/Input/private/: inputMgr.h  inputMgrBase.cc  inputMgrBase.h
engine/oryol/Modules/Resource/: CMakeLists.txt  Id.h  Locator.h  ResourceBase.h  ResourceRegistry.cc  ResourceRegistry.h  ResourceState.h
engine/oryol/Modules/Resource/UnitTests/: IdTest.cc  LocatorTest.cc  StateTest.cc  resourceRegistryTest.cc
engine/src/: AppMain.cpp  GameObject.cpp  GameObjectBuilder.cpp  Input.cpp  Material.cpp  MaterialManager.cpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  ShaderManager.cpp  SokolRenderer.cpp  sokol_stub.c  sokol_wrapper.c
engine/src/Components/: Animation.cpp  Canvas.cpp  InputHandler.cpp  RectRenderer.cpp  SimpleCollider.cpp  SpriteRenderer.cpp  Transform.cpp
include/: DebugTextures.h  GameObject.h  GameObjectBuilder.h  IRenderer.h  ITexture.h  Input.h  InputEvent.h  Material.h  MaterialManager.h  RenderTypes.h  Renderer.h  Resource.h  ResourceManager.h  SDLRenderer.h  Scene.h  SceneLoader.h  ShaderManager.h  SokolRenderer.h  StringHash.h  Texture.h  TextureResource.h  TexturesManager.h
include/Components/: Animation.h  BaseComponent.h  IInputHandler.h  InputHandler.h  RectRenderer.h  RendererComponent.h  SimpleCollider.h  SpriteRenderer.h  Transform.h
include/Scripts/: AppleLogic.h  EndScreenLogic.h  GameConsts.h  GameStateManager.h  IconImage.h  MainMenuLogic.h  MazeGenerator.h  NPCInputHandler.h  SnakeLogic.h
include/Shaders/: triangle-sapp.glsl.h
samples/snake/: CMakeLists.txt
samples/snake/include/: AppleLogic.h  EndScreenLogic.h  GameConsts.h  GameStateManager.h  MainMenuLogic.h  MazeGenerator.h  NPCInputHandler.h  SnakeLogic.h
samples/snake/src/: AppleLogic.cpp  EndScreenLogic.cpp  GameMain.cpp  GameStateManager.cpp  MainMenuLogic.cpp  MazeGenerator.cpp  NPCInputHandler.cpp  SnakeLogic.cpp
src/: AppMain.cpp  GameObject.cpp  GameObject.h  GameObjectBuilder.cpp  IRenderer.h  Input.cpp  Material.cpp  MaterialManager.cpp  Renderer.cpp  ResourceManager.cpp  SDLRenderer.cpp  SDLRenderer.h  Scene.cpp  Scene.h  Shader.cpp  ShaderManager.cpp  SokolRenderer.cpp  Texture.cpp  Texture.h  TextureResource.cpp  TexturesManager.cpp  TexturesManager.h  game.cpp  main.c  snake.html  snake.js  snake.wasm  sokol_wrapper.c
src/Components/: Animation.cpp  Animation.h  BaseComponent.h  IRendererComponent.h  InputHandler.cpp  InputHandler.h  RectRenderer.cpp  RectRenderer.h  RendererComponent.h  SimpleCollider.cpp  SimpleCollider.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h
src/Scripts/: ---GameStateMachine.h  AppleLogic.cpp  AppleLogic.h  EndScreenLogic.cpp  GameStateManager.cpp  MainMenuLogic.cpp  MazeGenerator.cpp  MazeGenerator.h  NPCInputHandler.cpp  NPCInputHandler.h  SnakeLogic.cpp  SnakeLogic.h
src/stb/: stb_image.c
tests/: CMakeLists.txt  test_animation.cpp  test_canvas.cpp  test_main.cpp  test_mocks.h  test_scene.cpp
